[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/RotationControl.gd" type="Script" id=1]

[node name="RotationControl" type="HBoxContainer"]
margin_right = 251.0
margin_bottom = 318.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dropdown" type="OptionButton" parent="."]
margin_right = 29.0
margin_bottom = 318.0

[node name="Label" type="Label" parent="."]
margin_left = 33.0
margin_top = 152.0
margin_right = 44.0
margin_bottom = 166.0
text = "O"

[node name="Dropdown2" type="OptionButton" parent="."]
margin_left = 48.0
margin_right = 77.0
margin_bottom = 318.0

[node name="Delete" type="Button" parent="."]
margin_left = 81.0
margin_right = 100.0
margin_bottom = 318.0
custom_colors/font_color = Color( 0.870588, 0.301961, 0.129412, 1 )
custom_colors/font_color_hover = Color( 0.870588, 0.301961, 0.129412, 1 )
custom_colors/font_color_pressed = Color( 0.870588, 0.301961, 0.129412, 1 )
text = "x"
[connection signal="item_selected" from="Dropdown" to="." method="_on_Dropdown_item_selected"]
[connection signal="item_selected" from="Dropdown2" to="." method="_on_Dropdown2_item_selected"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
